Task 4 - word-wrap added to prevent text overflow.

--- a/task4/task4.css
+++ b/task4/task4.css
@@ -29,4 +29,5 @@
     width: 94.5%; 
     margin: 2% 0 2.5% 0;
     border-radius: 3px;
+    word-wrap: break-word; /* чтобы текст не вылезал за форму */
 }
